--- a/easyhits.html
+++ b/easyhits.html
@@ -19,7 +19,7 @@
             <li><a href="">Riff City</a></li>
             <li><a href="">Acoustic</a></li>
             <li><a href="ballads.html">Ballads</a></li>
-            <li><a href="website.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
     
