deleted links to futher pages

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav>
         <ul>
             <li><a href="">80's</a></li>
-            <li><a href="easyhits.html">Easy Hits</a></li>
+            <li><a href="">Easy Hits</a></li>
             <li><a href="">Riff City</a></li>
             <li><a href="">Acoustic</a></li>
-            <li><a href="ballads.html">Ballads</a></li>
+            <li><a href="">Ballads</a></li>
         </ul>
     </nav>
     
