--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h1></h1>
         <h2>Song of the Day</h2>
         <h3><span id="date-time"></span></h3>
-        <p><iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/magic/829909653?i=829909824"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/23khhseCLQqVMCIT1WMAns?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <p><iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/close-to-you/1552018965?i=1552019511"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0brBOx8ejPXvBYnQkWquYK?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </section>
     <h4><a href="https://open.spotify.com/user/sportysoul23?si=78f74c592a5c47e4"><img src="logo2.png"></a></h4>
     
